Fix stale-cache 500s, mail health false-degraded status, and booking list not refreshing
- CacheConfig: add a CacheErrorHandler so a broken cache read/write (e.g.
  after a deploy changes a cached DTO's shape) falls back to a live query
  instead of throwing a 500 to the user.
- AdminServiceImpl: root-cause fix for the above — cached list methods used
  Stream.toList(), which returns a JDK-internal list class that isn't a
  stable Redis/Jackson serialization target. Switched to
  Collectors.toList() (plain ArrayList) for courier ways, package types,
  and departments.
- application.yml: disable the mail health indicator's contribution to the
  aggregate /actuator/health status, so a down/misconfigured mailbox no
  longer reports the whole app as degraded.
- BookingFormPage: use the existing createBooking/updateBooking RTK Query
  mutations (already had correct tag invalidation) instead of raw axios
  calls, so the bookings list refreshes automatically after create/update
  instead of requiring a manual browser refresh.
- Untrack backend/application.properties again (re-gitignored) — the
  earlier full-session revert had undone this; needed before adding a new
  local JWT secret to it to avoid re-leaking a credential.

Co-Authored-By: Claude Sonnet 5 <noreply@anthropic.com>